# data_engineer

./: .gitignore  LICENSE  context
data_translation/: checked_avro  get_file.ipynb  pandas.ipynb  streambigquery
python/: _dev_deps.py  create_table_from_jsonschema.py  examples.ipynb  openapi.yaml  pydantic.py  requirements.txt  test_csv.py  test_module.py  test_pydantic.py  users.csv  users_2.csv
python/models/: csv_user.py  json_schema.py  openapi.py  user_csv.py
python_package/: pyproject.toml
