[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
[project]
name = "example_package_jccruz_data_eng"
version = "0.0.1"
authors = [
  { name="Christian Cruz", email="python_issues@christiancruz.pro" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/compermisos/data_engineer/"
Issues = "https://github.com/compermisos/data_engineer/issues"
